commit on develop

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <span>Vanessa Kim</span>
             </h1>
             <p>New to coding, learning with SheCodes.</p>
-            <a href="#contact" class="btn btn--pink">Get in touch</a>
+            <a href="contact.html" class="btn btn--pink">Get in touch</a>
         </div>
     </div>   
 
