--- a/index.html
+++ b/index.html
@@ -5,16 +5,72 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Vanessa Kim Portfolio</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+
+
     </head>
-    <div class="header__text-box row">
-        <div class="header__text">
-            <h1 class="heading-primary">
-            <span>Vanessa Kim</span>
-            </h1>
+    <div>
+        <div>
+            <h1> Vanessa Kim </h1>
             <p>New to coding, learning with SheCodes.</p>
-            <a href="contact.html" class="btn btn--pink">Get in touch</a>
+            <nav>
+            <a href="contact.html" class="navigation">Get in touch</a>
+            </nav>
         </div>
     </div>   
 
+    <section>
+        <div>
+            <h2>About Me</h2>
+            <div>
+                <div>
+                    <p>
+                    Hello! My name is Vanessa. Originally from country Victoria, I now live in the Moreton Bay region with my partner and our two cats. I work full time at Auto and General as a Digital Communications Consultant. My role includes managing multiple live chats including through SMS and Whatsapp, responding to email enquiries and handling customer complaints.   
+                    <br>
+                    <p>
+                        I am an animal lover, enjoy playing video games and riding motorbikes. Learning to code is something I have always wanted to do, and I am excited to share my projects with you as I complete this journey.
+                    </p>    
+                    </brk>
+                    <p>
+                        To learn more about me, please see
+                        <a href="https://docs.google.com/document/d/1WOgWCBsbacksWvVO_f7CdbsMk8OHuWT7gCuAGVxNJZg/edit?usp=sharing" >My Resume.</a>
+                    </p>
+                </div>
+    
+                <div>
+                    <h2> My Projects </h2>
+                    <p> As I complete projects, I will be displaying them <a href="My Projects.html" >here. </a>
+                </div>
+
+                <div>
+                    <img
+                    class="photo"
+                    src="./images/Vanessa.jpg"
+                    alt="profile photo".\>
+                </div>
+    </section>
+
+    <footer class="footer">
+        <div class="row">
+            <ul class="footer__social">
+                <li class="footer__social-link-item">
+                    <a href="https://github.com/Nesskim">
+                        <img src="./images/github.png" class="footer__social-image" alt="Github">
+                    </a>
+                </li>
+                <li class="footer__social">
+                    <a href=https://www.linkedin.com/in/vanessa-kim-10ba19129/">
+                        <img src="./images/Linkedin-logo.png" class="footer__social-image" alt="Linkedin">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+
+
+
 
 </html>
+
