--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Contact Me</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
     </head>
 
     <body>
     <header>
-        <h1>Get in touch!</h1>
+        <h1 class="contact-heading"> Get in touch! </h1>
+        <nav>
+        <a href="index.html" class="navigation">Home</a>
+        <br>
+        <a href="My Projects.html" class="navigation">My Projects</a>
+        </nav>
     </header>
 
        <form action="https://formspree.io/f/xknypndd" method="post">
@@ -29,6 +37,13 @@
               <button type="submit">Send!</button>
             </div>
         </form>
+
+        <div class="photo-container">
+            <img
+            class="photo"
+            src="./images/MaoPud.jpg"
+            alt="Mao and Puddy".\>
+        </div>
 
     </body>
 </html>
