Commit cap changes

--- a/contact.html
+++ b/contact.html
@@ -38,10 +38,10 @@
             </div>
         </form>
 
-        <div class="photo-container">
+        <div>
             <img
             class="photo"
-            src="./images/MaoPud.jpg"
+            src="./images/MaoPud.JPG"
             alt="Mao and Puddy".\>
         </div>
 
