--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
                     <p>
                         I am an animal lover, enjoy playing video games and riding motorbikes. Learning to code is something I have always wanted to do, and I am excited to share my projects with you as I complete this journey.
                     </p>    
-                    </brk>
                     <p>
                         To learn more about me, please see
                         <a href="https://docs.google.com/document/d/1WOgWCBsbacksWvVO_f7CdbsMk8OHuWT7gCuAGVxNJZg/edit?usp=sharing" >My Resume.</a>
@@ -47,7 +46,7 @@
                 <div>
                     <img
                     class="photo"
-                    src="./images/Vanessa.jpg"
+                    src="./images/Vanessa.JPG"
                     alt="profile photo".\>
                 </div>
     </section>
@@ -57,12 +56,12 @@
             <ul class="footer__social">
                 <li class="footer__social-link-item">
                     <a href="https://github.com/Nesskim">
-                        <img src="./images/github.png" class="footer__social-image" alt="Github">
+                        <img src="./images/github.PNG" class="footer__social-image" alt="Github">
                     </a>
                 </li>
                 <li class="footer__social">
                     <a href=https://www.linkedin.com/in/vanessa-kim-10ba19129/">
-                        <img src="./images/Linkedin-logo.png" class="footer__social-image" alt="Linkedin">
+                        <img src="./images/Linkedin-logo.PNG" class="footer__social-image" alt="Linkedin">
                     </a>
                 </li>
             </ul>
