--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
             <ul class="footer__social">
                 <li class="footer__social-link-item">
                     <a href="https://github.com/Nesskim">
-                        <img src="./images/github.PNG" class="footer__social-image" alt="Github">
+                        <img src="https://dochub.com/xnessa-jade/qd0E4NeKgWpL25aKJ9LYyj/github-png?dt=zQbyxy2hDqhUr386RHDX" class="footer__social-image" alt="Github">
                     </a>
                 </li>
                 <li class="footer__social">
                     <a href=https://www.linkedin.com/in/vanessa-kim-10ba19129/">
-                        <img src="./images/Linkedin-logo.PNG" class="footer__social-image" alt="Linkedin">
+                        <img src="https://dochub.com/xnessa-jade/qd0E4NeKgWpLWroKJ9LYyj/linkedin-logo-png?dt=Qw48Msz4AzDzPb_jNv_v" class="footer__social-image" alt="Linkedin">
                     </a>
                 </li>
             </ul>
