changed photos to links
does not look as good but will hopefully deply

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
         <div>
             <img
             class="photo"
-            src="./images/MaoPud.JPG"
+            src="https://dochub.com/xnessa-jade/1XEpyxzwNg3Zg3ZRQZGd38/maopud-jpg?dt=fxowKV_3Dd1Py-LNP5AN"
             alt="Mao and Puddy".\>
         </div>
 
