--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div>
                     <img
                     class="photo"
-                    src="./images/Vanessa.JPG"
+                    src="https://dochub.com/xnessa-jade/pqb0g5YRqy5XJDDRJ2nx67/vanessa-jpg?dt=L9gjcxqDB2-RQ2EKA2XT"
                     alt="profile photo".\>
                 </div>
     </section>
