--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="My name is Hashir Shoaib. I’m a graduate of 2020 from National University of Sciences and Technology at Islamabad with a degree in Computer Engineering. I'm most passionate about giving back to the community, and my goal is to pursue this passion within the field of software engineering. In my free time I like working on open source projects."
+      content="My name is Vanessa Kim. I am a dedicated Test Analyst at Auto & General with history of meeting company goals utilizing consistent and organized practices.I am skilled in working under pressure and adapting to new situations and challenges to best enhance the organizational brand. In my free time I enjoy riding motorbikes, gardening and playing video games."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Hashir Shoaib</title>
+    <title> Vanessa Kim </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
